La til postgres sql og ryddet opp i test